fixed layout bug on mobile

--- a/src/scss/components/_n3ds.scss
+++ b/src/scss/components/_n3ds.scss
@@ -17,11 +17,11 @@
         margin-bottom: 1 * $size;
     }
     .section__description {
-        width: 60 * $size;
+        width: 30vw;
         margin-bottom: 6 * $size;
     }
     .button {
-        width: 50%;
+        width: 25%;
     }
     .row.bottom {
         position: absolute;
@@ -48,7 +48,6 @@
             margin-bottom: 1 * $size;
         }
         .section__description {
-            width: 65 * $size;
             margin-bottom: 6 * $size;
         }
     }
@@ -63,10 +62,7 @@
             margin-bottom: 0;
         }
         .section__description {
-            width: 70%;
-        }
-        .button {
-            width: 50% !important;
+            width: 40%;
         }
         .row.bottom {
             position: absolute;
@@ -75,10 +71,6 @@
             right: 10%;
             bottom: 5%;
             transform: unset;
-            .section__rom-name {
-                position: relative;
-                top: 0;
-            }
         }
     }
 }
